--- a/embedded/test_pwm/MDK/output/flashcode/flashcode.build_log.htm
+++ b/embedded/test_pwm/MDK/output/flashcode/flashcode.build_log.htm
@@ -21,54 +21,54 @@ Target DLL:      Segger\JL2CM3.dll V2.99.20.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\test_pwm.uvprojx
+d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\test_pwm.uvprojx
 Project File Date:  01/22/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'd:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'flashcode'
+Build target 'flashcode'
 assembling startup_n32g4fr.s...
-compiling system_n32g4fr.c...
 compiling systick.c...
-compiling app.c...
 compiling misc.c...
-compiling n32g4fr_it.c...
+compiling app.c...
+compiling system_n32g4fr.c...
 compiling n32g4fr_adc.c...
+compiling n32g4fr_it.c...
 compiling main.c...
 compiling n32g4fr_bkp.c...
-compiling n32g4fr_crc.c...
-compiling n32g4fr_can.c...
-compiling n32g4fr_dbg.c...
 compiling n32g4fr_dac.c...
-compiling n32g4fr_exti.c...
 compiling n32g4fr_dvp.c...
+compiling n32g4fr_crc.c...
 compiling n32g4fr_dma.c...
-compiling n32g4fr_iwdg.c...
+compiling n32g4fr_dbg.c...
+compiling n32g4fr_can.c...
+compiling n32g4fr_exti.c...
 compiling n32g4fr_flash.c...
+compiling n32g4fr_iwdg.c...
 compiling n32g4fr_gpio.c...
 compiling n32g4fr_pwr.c...
 compiling n32g4fr_i2c.c...
-compiling n32g4fr_rcc.c...
 compiling n32g4fr_qspi.c...
+compiling n32g4fr_rcc.c...
 compiling n32g4fr_rtc.c...
-compiling SEGGER_HardFaultHandler.c...
 compiling n32g4fr_sdio.c...
+compiling SEGGER_HardFaultHandler.c...
 compiling n32g4fr_spi.c...
 compiling n32g4fr_tsc.c...
-compiling n32g4fr_usart.c...
 compiling n32g4fr_wwdg.c...
+compiling n32g4fr_usart.c...
 compiling n32g4fr_xfmc.c...
-compiling n32g4fr_tim.c...
 assembling HardFaultHandler.S...
+compiling n32g4fr_tim.c...
 compiling SEGGER_RTT_printf.c...
 compiling SEGGER_RTT.c...
 compiling delay.c...
 compiling log.c...
 linking...
-Program Size: Code=16034 RO-data=718 RW-data=8 ZI-data=3336  
+Program Size: Code=16030 RO-data=718 RW-data=8 ZI-data=3336  
 FromELF: creating hex file...
-After Build - User command #1: fromelf --bin -o ".\bin\flashcode.bin" "D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\output\flashcode\flashcode.axf"
-After Build - User command #2: fromelf -c "D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\output\flashcode\flashcode.axf" -o "D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\output\flashcode\flashcode.asm"
+After Build - User command #1: fromelf --bin -o ".\bin\flashcode.bin" "d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\output\flashcode\flashcode.axf"
+After Build - User command #2: fromelf -c "d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\output\flashcode\flashcode.axf" -o "d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_pwm\MDK\output\flashcode\flashcode.asm"
 ".\output\flashcode\flashcode.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
