--- a/embedded/test_uart/MDK/output/ramcode/ramcode.build_log.htm
+++ b/embedded/test_uart/MDK/output/ramcode/ramcode.build_log.htm
@@ -27,6 +27,37 @@ Project File Date:  01/24/2022
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'd:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'ramcode'
+assembling Startup_ACM32F4.s...
+compiling app.c...
+compiling HAL_CRC.c...
+compiling HAL_COMP.c...
+compiling main.c...
+compiling HAL_DAC.c...
+compiling System_ACM32F4.c...
+compiling HAL_CAN.c...
+compiling HAL_EFlash.c...
+compiling HAL_DMA.c...
+compiling HAL_EXTI.c...
+compiling HAL_IWDT.c...
+compiling HAL_GPIO.c...
+compiling HAL_FSUSB.c...
+compiling HAL_I2S.c...
+compiling HAL_I2C.c...
+compiling HAL_LPUART.c...
+compiling HAL_OPA.c...
+compiling HAL_TIMER_EX.c...
+compiling HAL_RTC.c...
+compiling HAL_UART_EX.c...
+compiling HAL_SPI.c...
+compiling HAL_UART.c...
+compiling SEGGER_HardFaultHandler.c...
+compiling HAL_TIMER.c...
+compiling HAL_WDT.c...
+assembling HardFaultHandler.S...
+compiling SEGGER_RTT_printf.c...
+compiling SEGGER_RTT.c...
+linking...
+Program Size: Code=12828 RO-data=620 RW-data=4 ZI-data=3428  
 After Build - User command #1: fromelf --bin -o ".\bin\ramcode.bin" "d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_uart\MDK\output\ramcode\ramcode.axf"
 After Build - User command #2: fromelf -c "d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_uart\MDK\output\ramcode\ramcode.axf" -o "d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_uart\MDK\output\ramcode\ramcode.asm"
 ".\output\ramcode\ramcode.axf" - 0 Error(s), 0 Warning(s).
@@ -41,7 +72,7 @@ Package Vendor: Aisinochip
 <h2>Collection of Component include folders:</h2>
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
