--- a/embedded/test_coremark/MDK/output/flashcode/flashcode.build_log.htm
+++ b/embedded/test_coremark/MDK/output/flashcode/flashcode.build_log.htm
@@ -21,59 +21,59 @@ Target DLL:      Segger\JL2CM3.dll V2.99.20.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\test_coremark.uvprojx
+D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\test_coremark.uvprojx
 Project File Date:  01/21/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'd:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'flashcode'
+Rebuild target 'flashcode'
 assembling startup_n32g4fr.s...
 compiling misc.c...
 compiling n32g4fr_it.c...
-compiling system_n32g4fr.c...
 compiling n32g4fr_bkp.c...
+compiling system_n32g4fr.c...
 compiling app.c...
 compiling n32g4fr_adc.c...
 compiling main.c...
-compiling n32g4fr_dbg.c...
-compiling n32g4fr_crc.c...
-compiling n32g4fr_exti.c...
-compiling n32g4fr_dvp.c...
 compiling n32g4fr_dac.c...
-compiling n32g4fr_dma.c...
+compiling n32g4fr_dbg.c...
 compiling n32g4fr_can.c...
+compiling n32g4fr_dvp.c...
+compiling n32g4fr_crc.c...
+compiling n32g4fr_dma.c...
+compiling n32g4fr_exti.c...
 compiling n32g4fr_iwdg.c...
-compiling n32g4fr_gpio.c...
 compiling n32g4fr_pwr.c...
+compiling n32g4fr_gpio.c...
 compiling n32g4fr_i2c.c...
 compiling n32g4fr_rcc.c...
 compiling n32g4fr_qspi.c...
+compiling n32g4fr_sdio.c...
 compiling n32g4fr_flash.c...
 compiling n32g4fr_rtc.c...
-compiling n32g4fr_sdio.c...
 compiling n32g4fr_spi.c...
-compiling n32g4fr_tsc.c...
 compiling n32g4fr_wwdg.c...
-compiling SEGGER_HardFaultHandler.c...
 compiling n32g4fr_usart.c...
-compiling n32g4fr_xfmc.c...
+compiling SEGGER_HardFaultHandler.c...
+compiling n32g4fr_tsc.c...
 assembling HardFaultHandler.S...
+compiling n32g4fr_xfmc.c...
 compiling n32g4fr_tim.c...
 compiling delay.c...
-compiling log.c...
 compiling SEGGER_RTT_printf.c...
-compiling core_portme.c...
+compiling log.c...
 compiling core_main.c...
-compiling core_list_join.c...
+compiling core_portme.c...
 compiling SEGGER_RTT.c...
+compiling core_list_join.c...
 compiling core_util.c...
 compiling core_state.c...
 compiling core_matrix.c...
 linking...
-Program Size: Code=20680 RO-data=1692 RW-data=20 ZI-data=34068  
+Program Size: Code=20680 RO-data=1672 RW-data=20 ZI-data=34068  
 FromELF: creating hex file...
-After Build - User command #1: fromelf --bin -o ".\bin\flashcode.bin" "d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf"
-After Build - User command #2: fromelf -c "d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf" -o "d:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\output\flashcode\flashcode.asm"
+After Build - User command #1: fromelf --bin -o ".\bin\flashcode.bin" "D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf"
+After Build - User command #2: fromelf -c "D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf" -o "D:\cccc2020\CODE\workspace\bfsk_n32\embedded\test_coremark\MDK\output\flashcode\flashcode.asm"
 ".\output\flashcode\flashcode.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -87,7 +87,7 @@ Package Vendor: Nationstech
   d:\Keil_v5\Arm\Packs\Nationstech\N32G4FR_DFP\1.0.1\firmware\CMSIS\device
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
