--- a/embedded/test_coremark/MDK/output/flashcode/flashcode.build_log.htm
+++ b/embedded/test_coremark/MDK/output/flashcode/flashcode.build_log.htm
@@ -21,12 +21,12 @@ Target DLL:      CMSIS_AGDI_V8M.DLL V1.6.17.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\test_coremark.uvprojx
+D:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\test_coremark.uvprojx
 Project File Date:  01/28/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'd:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'flashcode'
+Rebuild target 'flashcode'
 assembling Startup_ACM32F4.s...
 compiling app.c...
 compiling HAL_CRC.c...
@@ -36,37 +36,37 @@ compiling HAL_DAC.c...
 compiling System_ACM32F4.c...
 compiling HAL_CAN.c...
 compiling HAL_EFlash.c...
-compiling HAL_EXTI.c...
 compiling HAL_DMA.c...
+compiling HAL_EXTI.c...
+compiling HAL_IWDT.c...
 compiling HAL_FSUSB.c...
 compiling HAL_GPIO.c...
-compiling HAL_IWDT.c...
 compiling HAL_I2S.c...
 compiling HAL_OPA.c...
-compiling HAL_LPUART.c...
 compiling HAL_RTC.c...
+compiling HAL_LPUART.c...
 compiling HAL_TIMER_EX.c...
-compiling HAL_I2C.c...
-compiling HAL_WDT.c...
-compiling HAL_UART.c...
-compiling HAL_SPI.c...
-compiling HAL_UART_EX.c...
-compiling HAL_TIMER.c...
 compiling SEGGER_HardFaultHandler.c...
+compiling HAL_WDT.c...
+compiling HAL_I2C.c...
+compiling HAL_SPI.c...
+compiling HAL_TIMER.c...
+compiling HAL_UART_EX.c...
 assembling HardFaultHandler.S...
+compiling HAL_UART.c...
 compiling core_portme.c...
 compiling core_main.c...
 compiling core_util.c...
-compiling SEGGER_RTT_printf.c...
 compiling core_state.c...
+compiling SEGGER_RTT_printf.c...
 compiling core_list_join.c...
 compiling SEGGER_RTT.c...
 compiling core_matrix.c...
 linking...
 Program Size: Code=22100 RO-data=1628 RW-data=16 ZI-data=34160  
 FromELF: creating hex file...
-After Build - User command #1: fromelf --bin -o ".\bin\flashcode.bin" "d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf"
-After Build - User command #2: fromelf -c "d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf" -o "d:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\output\flashcode\flashcode.asm"
+After Build - User command #1: fromelf --bin -o ".\bin\flashcode.bin" "D:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf"
+After Build - User command #2: fromelf -c "D:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\output\flashcode\flashcode.axf" -o "D:\cccc2020\CODE\workspace\bfsk_acm32\embedded\test_coremark\MDK\output\flashcode\flashcode.asm"
 ".\output\flashcode\flashcode.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -79,7 +79,7 @@ Package Vendor: Aisinochip
 <h2>Collection of Component include folders:</h2>
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
